# hatch

./: .gitignore  Vagrantfile
hatch/: CMakeLists.gtest.in.txt  CMakeLists.libressl.in.txt  CMakeLists.txt
hatch/hatch/core/: allocated.hh  allocated_impl.hh  allocation.hh  allocator.hh  allocator_impl.hh  async.hh  async_fwd.hh  asynchronous.hh  buffer.hh  future.hh  future_impl.hh  handle.hh  handle_impl.hh  indexed_list.hh  indexed_list_impl.hh  indexed_list_iterator.hh  indexed_list_iterator_impl.hh  liberated.hh  liberated_impl.hh  list.hh  list_impl.hh  memory.hh  memory_fwd.hh  pointer.hh  pointer_impl.hh  pointer_list.hh  pointer_list_impl.hh  pointer_list_iterator.hh  pointer_list_iterator_impl.hh  pointer_tree.hh  pointer_tree_impl.hh  promise.hh  promise_impl.hh  reactor.cc  reactor.hh  slabs.hh  socket.hh  streamer.cc  streamer.hh  structures.hh  (+2 more)
hatch/hatch/utility/: branch.hh  branch_decl.hh  branch_fwd.hh  branch_impl.hh  chain.hh  chain_decl.hh  chain_fwd.hh  chain_impl.hh  container.hh  container_decl.hh  container_fwd.hh  container_impl.hh  indexed.hh  indexed_decl.hh  indexed_defs.hh  indexed_fwd.hh  indexed_impl.hh  indexed_list.hh  indexed_list_fwd.hh  indexed_list_iterator.hh  indexed_list_iterator_impl.hh  indexed_list_node.hh  indexed_list_node_impl.hh  integral.hh  integral_decl.hh  integral_defs.hh  integral_fwd.hh  integral_impl.hh  keep.hh  keep_fwd.hh  keeper.hh  keeper_impl.hh  kept.hh  kept_impl.hh  list.hh  list_fwd.hh  list_impl.hh  list_iterator.hh  list_iterator_impl.hh  list_node.hh  (+39 more)
hatch/test/core/: async.cc  asynchronous.cc  buffer.cc  memory.cc  socket.cc  structures.cc
hatch/test/utility/: branch.cc  chain.cc  container.cc  indexed.cc  indexed_list.cc  integral.cc  keep.cc  list.cc  meta.cc  owning.cc  pointed.cc  pointer_list.cc  pointer_tree.cc  tree.cc
